--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test",
-    "lint": "tsdx lint",
+    "lint": "eslint src --ext .ts,.tsx",
+	"fix": "eslint src --ext .ts,.tsx --fix",
     "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why"
@@ -45,6 +46,9 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "eslint": "^8.24.0",
     "husky": "^8.0.1",
     "size-limit": "^8.1.0",
     "tsdx": "^0.13.3",
